# lcc

./: README.md
可执行程序/: lcc  test1.txt  test2.s  test2.txt  test3.s  test3.txt  test4.txt  test5.txt
源代码/: CMakeLists.txt  as.cpp  as.h  compiler.cpp  compiler.h  error.cpp  error.h  gen.cpp  gen.h  ir.cpp  ir.h  lexer.cpp  lexer.h  main.cpp  opcode.h  parser.cpp  parser.h  reg.cpp  reg.h  symbol.cpp  symbol.h  template.h
